--- a/dev.html
+++ b/dev.html
@@ -9,6 +9,7 @@
     <link href="./assets/croppie.css" rel="stylesheet" async="async">
     <link href="./assets/style.css" rel="stylesheet" async="async">
     <script src="./assets/jquery-3.1.1.min.js"></script>
+    <script src="./assets/fabric.min.js"></script>
     <script src="./assets/croppie.min.js" async="async"></script>
     <script src="./assets/app.js" async="async"></script>
     <script id="picviewer-page-script">(function (messageID) {
@@ -141,11 +142,7 @@
 <body data-new-gr-c-s-check-loaded="14.996.0" data-gr-ext-installed="">
     <div id="wrapper">
         <div id="content">
-            <div id="preview">
-                <div id="crop-area">
-
-                </div>
-                <img src="./assets/postkarte-0.png" id="fg" data-design="0">
+            <div id="preview_panel">
             </div>
             <p>
                 <button id="download" disabled="">Download</button>
