download feature added - not tested

--- a/dev.html
+++ b/dev.html
@@ -19,7 +19,7 @@
             <canvas id="preview_panel" width="500" height="300">
             </canvas>
             <p>
-                <button id="download" disabled="">Download</button>
+                <a href="#" id="download" disabled="">Download</a>
             </p>
             <h2>Upload your photo</h2>
             <input type="file" name="file" onchange="onFileChange(this)">
