download feature completed

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body data-new-gr-c-s-check-loaded="14.996.0" data-gr-ext-installed="">
     <div id="wrapper">
         <div id="content">
-            <canvas id="preview_panel" width="500" height="300">
+            <canvas id="preview_panel" width="1280" height="853">
             </canvas>
             <p>
-                <a href="#" id="download" disabled="">Download</a>
+                <button id="download" disabled="">Download</button>
             </p>
             <h2>Upload your photo</h2>
             <input type="file" name="file" onchange="onFileChange(this)">
