responsive design start

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body data-new-gr-c-s-check-loaded="14.996.0" data-gr-ext-installed="">
     <div id="wrapper">
         <div id="content">
-            <canvas id="preview_panel" width="1280" height="853">
+            <canvas id="preview_panel">
             </canvas>
             <p>
                 <button id="download" disabled="">Download</button>
