--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <div id="status"></div>
             <h2>Select frame</h2>
             <div id="designs">
-                <img class="design active" src="./assets/postkarte-0.png" data-design="0">
-                <img class="design" src="./assets/postkarte-1.png" data-design="1">
-                <img class="design" src="./assets/postkarte-2.png" data-design="2">
+                <img class="design active" loading="eager" src="./assets/postkarte-0.png" data-design="0">
+                <img class="design" loading="lazy" src="./assets/postkarte-1.png" data-design="1">
+                <img class="design" loading="lazy" src="./assets/postkarte-2.png" data-design="2">
             </div>
             <div id="comments">
 
