--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="./assets/fabric.min.js"></script>
 </head>
 
-<body data-new-gr-c-s-check-loaded="14.996.0" data-gr-ext-installed="">
+<body>
     <div id="wrapper">
         <div id="content">
             <canvas id="preview_panel">
@@ -19,34 +19,14 @@
             </p>
             <h2>Upload your photo</h2>
             <input type="file" name="file" onchange="onFileChange(this)">
-            <div id="status"></div>
             <h2>Select frame</h2>
             <div id="designs">
                 <img class="design active" loading="eager" src="./assets/postkarte-0.png" data-design="0">
                 <img class="design" loading="lazy" src="./assets/postkarte-1.png" data-design="1">
                 <img class="design" loading="lazy" src="./assets/postkarte-2.png" data-design="2">
             </div>
-            <div id="comments">
-
-            </div>
         </div>
     </div>
-
-    <span id="pv-float-bar-container" style="opacity: 1; top: 0px; left: 428.5px; display: none;">
-        <span class="pv-float-bar-button pv-float-bar-button-actual" title="View original (A)"
-            style="display: none;">
-        </span>
-        <span class="pv-float-bar-button pv-float-bar-button-current"
-            title="View current (C)">
-        </span>
-        <span class="pv-float-bar-button pv-float-bar-button-gallery"
-            title="View Gallery (G)">
-        </span>
-        <span class="pv-float-bar-button pv-float-bar-button-magnifier"
-            title="Magnifier / ZooM (M)" style="display: none;">
-        </span>
-    
-    </span>
 </body>
 <script src="./assets/main.js" async="async"></script>
 </html>
