custom fabric version which enable touch events

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>Create your selfie</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./assets/style.css" rel="stylesheet" async="async">
+    <link href="./assets/prism.css" rel="stylesheet" async="async">
     <script src="./assets/jquery-3.1.1.min.js"></script>
-    <script src="./assets/fabric.min.js"></script>
+    <script src="./assets/prism.js"></script>
+    <script src="./assets/fabric_with_gestures.js"></script>
 </head>
 
 <body>
