--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Selfie-Postkarte erstellen</title>
+    <title>SHOW-PASS-GENERATOR</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./assets/style.css" rel="stylesheet" async="async">
     <link href="./assets/prism.css" rel="stylesheet" async="async">
@@ -22,7 +22,7 @@
                 <h5 id="no-file">Keine Datei ausgewählt</h5>
             </div>
             <button id="download" disabled="">
-                <img alt="Selfie-Postkarte jetzt herunterladen" src="./assets/button.png">
+                <img alt="Show-Pass jetzt herunterladen" src="./assets/button.png">
             </button>
             <div id="designs" style="display:none;">
                 <img class="design active" src="./assets/postkarte-0.png" data-design="0">
