download different frame from stage one

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <img alt="Show-Pass jetzt herunterladen" src="./assets/button.png">
             </button>
             <div id="designs" style="display:none;">
-                <img class="design active" src="./assets/postkarte-0.png" data-design="0">
+                <img class="design active" src="./assets/frontend.png" data-design="0">
                 <img class="design" src="./assets/postkarte-1.png" data-design="1">
                 <img class="design" src="./assets/postkarte-2.png" data-design="2">
             </div>
